# ncframe

./: .clang  .clang_complete  .gitignore  .syntastic_clang_check_config  .syntastic_clang_tidy_config  CMakeLists.txt  Makefile  README.md  TODO.md
inc/api/: Feedly.hpp  Request.hpp
inc/app/: CategoryMenu.hpp  EntriesMenu.hpp
inc/common/: defcurs.h  platform.h
inc/ncf/: Application.hpp  Column.hpp  ColumnLayout.hpp  Component.hpp  Composition.hpp  Decorators.hpp  Geometry.hpp  Layout.hpp  Layouts.hpp  Menu.hpp  MenuItem.hpp  NCException.hpp  NCMenuException.hpp  NCWindowException.hpp  Pad.hpp  Panel.hpp  Row.hpp  RowLayout.hpp  TextLayout.hpp  TextView.hpp  View.hpp  Widget.hpp  Widgets.hpp  Window.hpp
inc/ncf/ncurses/: Menu.hpp  MenuItem.hpp  NCException.hpp  NCMenuException.hpp  NCPanelException.hpp  NCWindowException.hpp  Pad.hpp  Panel.hpp  Window.hpp  ncurses.hpp
inc/ncf/widgets/: Menu.hpp  Widget.hpp
inc/ncurses/: Application.hpp  Component.hpp  Composition.hpp  Decorators.hpp  Layouts.hpp  Menu.hpp  TextView.hpp  View.hpp  Widgets.hpp  Window.hpp
ncf/inc/common/: Arguments.hpp
ncf/inc/ncf/: Application.hpp  Column.hpp  Component.hpp  Decorators.hpp  Geometry.hpp  Menu.hpp  NCException.hpp  NCPanelException.hpp  NCWindowException.hpp  Panel.hpp  Row.hpp  TextBox.hpp  TextView.hpp  View.hpp  Widget.hpp  Window.hpp  ncurses.hpp
ncf/ncf/: Application.cpp  CMakeLists.txt  Menu.cpp  Panel.cpp  TextBox.cpp  TextView.cpp  View.cpp  Widget.cpp  Window.cpp
samples/: CMakeLists.txt  Makefile
samples/inc/: CategoryMenu.hpp  EntriesMenu.hpp  Feedly.hpp
samples/inc/api/: Response.hpp
samples/inc/app/: CategoryMenu.hpp  EntriesMenu.hpp
samples/src/: Feedly.cpp  Makefile  Request.cpp  Response.cpp  main.cpp
src/: Makefile  Widget.cpp
src/api/: Makefile  Request.cpp  Response.cpp
src/app/: Makefile  main.cpp
src/ncf/: Application.cpp  CMakeLists.txt  Column.cpp  ColumnLayout.cpp  Layout.cpp  Layouts.cpp  Makefile  Menu.cpp  MenuItem.cpp  Pad.cpp  Panel.cpp  Row.cpp  RowLayout.cpp  TextView.cpp  View.cpp  Widget.cpp  Window.cpp
src/ncf/widgets/: Menu.cpp
src/ncurses/: Application.cpp  CMakeLists.txt  Layouts.cpp  Makefile  Menu.cpp  Pad.cpp  Panel.cpp  TextView.cpp  View.cpp  Widget.cpp  Window.cpp
tests/: CMakeLists.txt
tests/menu/: single_menu.cpp  single_menu_sample.cpp  triple_in_row_menu_sample.cpp
tests/textbox/: single_simple_textbox_sample.cpp
unit_test/: FeedlyTests.cc  Makefile
